--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" path="/UniMassProject"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
